<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/header_text"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:visibility="visible"
            tools:visibility="visible" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/avatar_button"
        android:layout_width="304dp"
        android:layout_height="544dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CalendarView
                android:id="@+id/calendar_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:minHeight="100dp" />

            <EditText
                android:id="@+id/latitude_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/latitude_hint"
                android:digits="0,1,2,3,4,5,6,7,8,9,-,."
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/longitude_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/longitude_hint"
                android:digits="0,1,2,3,4,5,6,7,8,9,-,."
                android:minHeight="48dp" />

        </LinearLayout>

    </FrameLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/save_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_button" />
</androidx.constraintlayout.widget.ConstraintLayout>